[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/Rooms/StandardRoom.gd" type="Script" id=1]
[ext_resource path="res://GFX/Room Textures/Ground.png" type="Texture" id=2]
[ext_resource path="res://GFX/Room Textures/stone.png" type="Texture" id=3]
[ext_resource path="res://GFX/Placeholder/Dungeon Tileset.png" type="Texture" id=4]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://GFX/Placeholder/Lights/Nice_Light_01.png" type="Texture" id=6]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 8, 16, 8, 16, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 8, 8, 24, 8, 24, 40, 8, 40 )

[sub_resource type="StreamTexture" id=4]
load_path = "res://.import/Ground.png-ef1085849b2d7705c5b1a4b2522da040.stex"

[sub_resource type="TileSet" id=5]
0/name = "Ground"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 96, 80, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0
1/name = "Wall"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 96, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "Ground_2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 48, 16, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [  ]
2/z_index = 0
3/name = "barrel_1"
3/texture = ExtResource( 4 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 128, 64, 16, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "pillar"
4/texture = ExtResource( 4 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 200, 0, 32, 40 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "Ground.png 5"
5/texture = SubResource( 4 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 256, 256 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shapes = [  ]
5/z_index = 0
6/name = "stone.png 6"
6/texture = ExtResource( 3 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 256, 256 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shapes = [  ]
6/z_index = 0

[node name="StandardRoom" type="Node2D"]
script = ExtResource( 1 )

[node name="GroundTexture" type="TextureRect" parent="."]
margin_right = 10240.0
margin_bottom = 6080.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 2

[node name="GroundTexture2" type="TextureRect" parent="."]
margin_top = 288.0
margin_right = 10160.0
margin_bottom = 768.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 2

[node name="GroundTexture3" type="TextureRect" parent="."]
margin_left = 464.0
margin_right = 944.0
margin_bottom = 6080.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 2

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 510, 300 )
zoom = Vector2( 0.5, 0.5 )

[node name="Back" type="TileMap" parent="."]
tile_set = SubResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="Front" type="TileMap" parent="."]
tile_set = SubResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 20, 1, 0, 21, 1, 0, 22, 1, 0, 23, 1, 0, 24, 1, 0, 25, 1, 0, 26, 1, 0, 27, 1, 0, 28, 1, 0, 32, 1, 0, 33, 1, 0, 34, 1, 0, 35, 1, 0, 36, 1, 0, 37, 1, 0, 38, 1, 0, 39, 1, 0, 40, 1, 0, 41, 1, 0, 42, 1, 0, 43, 1, 0, 44, 1, 0, 45, 1, 0, 46, 1, 0, 47, 1, 0, 48, 1, 0, 49, 1, 0, 50, 1, 0, 51, 1, 0, 52, 1, 0, 53, 1, 0, 54, 1, 0, 55, 1, 0, 56, 1, 0, 57, 1, 0, 58, 1, 0, 59, 1, 0, 60, 1, 0, 61, 1, 0, 62, 1, 0, 63, 1, 0, 65536, 1, 0, 65599, 1, 0, 131072, 1, 0, 131135, 1, 0, 196608, 1, 0, 196671, 1, 0, 262144, 1, 0, 262207, 1, 0, 327680, 1, 0, 327743, 1, 0, 393216, 1, 0, 393279, 1, 0, 458752, 1, 0, 458815, 1, 0, 524288, 1, 0, 524351, 1, 0, 589824, 1, 0, 589887, 1, 0, 655360, 1, 0, 655423, 1, 0, 720896, 1, 0, 720959, 1, 0, 786432, 1, 0, 786495, 1, 0, 851968, 1, 0, 852031, 1, 0, 917504, 1, 0, 917567, 1, 0, 983040, 1, 0, 983103, 1, 0, 1048576, 1, 0, 1048639, 1, 0, 1114112, 1, 0, 1114175, 1, 0, 1376256, 1, 0, 1376319, 1, 0, 1441792, 1, 0, 1441855, 1, 0, 1507328, 1, 0, 1507391, 1, 0, 1572864, 1, 0, 1572927, 1, 0, 1638400, 1, 0, 1638463, 1, 0, 1703936, 1, 0, 1703999, 1, 0, 1769472, 1, 0, 1769535, 1, 0, 1835008, 1, 0, 1835071, 1, 0, 1900544, 1, 0, 1900607, 1, 0, 1966080, 1, 0, 1966143, 1, 0, 2031616, 1, 0, 2031679, 1, 0, 2097152, 1, 0, 2097215, 1, 0, 2162688, 1, 0, 2162751, 1, 0, 2228224, 1, 0, 2228287, 1, 0, 2293760, 1, 0, 2293823, 1, 0, 2359296, 1, 0, 2359359, 1, 0, 2424832, 1, 0, 2424833, 1, 0, 2424834, 1, 0, 2424835, 1, 0, 2424836, 1, 0, 2424837, 1, 0, 2424838, 1, 0, 2424839, 1, 0, 2424840, 1, 0, 2424841, 1, 0, 2424842, 1, 0, 2424843, 1, 0, 2424844, 1, 0, 2424845, 1, 0, 2424846, 1, 0, 2424847, 1, 0, 2424848, 1, 0, 2424849, 1, 0, 2424850, 1, 0, 2424851, 1, 0, 2424852, 1, 0, 2424853, 1, 0, 2424854, 1, 0, 2424855, 1, 0, 2424856, 1, 0, 2424857, 1, 0, 2424858, 1, 0, 2424859, 1, 0, 2424860, 1, 0, 2424864, 1, 0, 2424865, 1, 0, 2424866, 1, 0, 2424867, 1, 0, 2424868, 1, 0, 2424869, 1, 0, 2424870, 1, 0, 2424871, 1, 0, 2424872, 1, 0, 2424873, 1, 0, 2424874, 1, 0, 2424875, 1, 0, 2424876, 1, 0, 2424877, 1, 0, 2424878, 1, 0, 2424879, 1, 0, 2424880, 1, 0, 2424881, 1, 0, 2424882, 1, 0, 2424883, 1, 0, 2424884, 1, 0, 2424885, 1, 0, 2424886, 1, 0, 2424887, 1, 0, 2424888, 1, 0, 2424889, 1, 0, 2424890, 1, 0, 2424891, 1, 0, 2424892, 1, 0, 2424893, 1, 0, 2424894, 1, 0, 2424895, 1, 0 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 32, 32 )
speed = 80.0

[node name="Enemies" type="Node2D" parent="."]

[node name="PlayerEntrancePos" type="Node2D" parent="."]

[node name="East" type="Position2D" parent="PlayerEntrancePos"]
position = Vector2( 992, 312 )

[node name="South" type="Position2D" parent="PlayerEntrancePos"]
position = Vector2( 496, 560 )

[node name="West" type="Position2D" parent="PlayerEntrancePos"]
position = Vector2( 40, 312 )

[node name="North" type="Position2D" parent="PlayerEntrancePos"]
position = Vector2( 488, 48 )

[node name="NorthWest" type="Position2D" parent="PlayerEntrancePos"]
position = Vector2( 80, 80 )

[node name="NorthEast" type="Position2D" parent="PlayerEntrancePos"]
position = Vector2( 960, 96 )

[node name="SouthEast" type="Position2D" parent="PlayerEntrancePos"]
position = Vector2( 960, 544 )

[node name="SouthWest" type="Position2D" parent="PlayerEntrancePos"]
position = Vector2( 80, 544 )

[node name="Lighting" type="CanvasModulate" parent="."]
color = Color( 0.678431, 0.678431, 0.678431, 1 )

[node name="LightingNodes" type="Node2D" parent="."]
editor/display_folded = true

[node name="Light2D" type="Light2D" parent="LightingNodes"]
position = Vector2( 80, 80 )
texture = ExtResource( 6 )
texture_scale = 6.0
color = Color( 1, 0.854902, 0.419608, 1 )

[node name="Light2D2" type="Light2D" parent="LightingNodes"]
position = Vector2( 488, 80 )
texture = ExtResource( 6 )
texture_scale = 6.0
color = Color( 1, 0.854902, 0.419608, 1 )

[node name="Light2D3" type="Light2D" parent="LightingNodes"]
position = Vector2( 928, 80 )
texture = ExtResource( 6 )
texture_scale = 6.0
color = Color( 1, 0.854902, 0.419608, 1 )

[node name="Light2D4" type="Light2D" parent="LightingNodes"]
position = Vector2( 928, 458 )
texture = ExtResource( 6 )
texture_scale = 6.0
color = Color( 1, 0.854902, 0.419608, 1 )

[node name="Light2D5" type="Light2D" parent="LightingNodes"]
position = Vector2( 488, 458 )
texture = ExtResource( 6 )
texture_scale = 6.0
color = Color( 1, 0.854902, 0.419608, 1 )

[node name="Light2D6" type="Light2D" parent="LightingNodes"]
position = Vector2( 128, 458 )
texture = ExtResource( 6 )
texture_scale = 6.0
color = Color( 1, 0.854902, 0.419608, 1 )
